# yast-devtools

./: .cvsignore  .gitignore  .travis.yml  Dockerfile  MAINTAINER  Makefile.cvs  README.md  RPMNAME  acinclude.m4  configure.in  configure.in.in  yast2-devtools.pc.in  yast2-devtools.spec.in
.github/workflows/: ci.yml  submit.yml
build-tools/: Makefile.am  Makefile.am.common  Makefile.am.toplevel
build-tools/aclocal/: Makefile.am  y2autoconf.m4  y2devtools.m4
build-tools/aminclude/: Makefile.am  README  autodocs-cc-off.ami  autodocs-cc.ami  autodocs-ycp.ami
build-tools/cmake/: TODO
build-tools/data/: Makefile.am  YaST2.dict.txt
build-tools/doc/: Makefile.am
build-tools/doxygen/: Makefile.am  ydoxygen  (+1 more)
build-tools/scripts/: Makefile.am  control_to_glade.xsl  gettextdomains  po_add_format_hints  po_add_format_hints.rb  qt_ui.its  y2autoconf  y2automake  y2makepot  y2metainfo  yast_control.its
build_tools/: Makefile.am  Makefile.am.toplevel
devtools/: .cvsignore  Makefile.am
devtools/doc/: .cvsignore  Makefile.am  rny2rnc.html  yast2-devtools-section.xml  yast2-devtools.sgml  yast2-devtools.xml
devtools/doc/skeletons/: Makefile.am
devtools/doc/skeletons/config/: Makefile.am
devtools/skeletons/: Makefile.am  TODO
devtools/skeletons/agent/: Makefile.cvs  README  RPMNAME  _cvsignore  yast2-XXpkgXX.spec.in  yast2-agent-XXpkgXX.spec.in
devtools/skeletons/agent/conf/: Makefile.am  XXpkgXX.scr
devtools/skeletons/agent/doc/: Makefile.am  TODO.txt  XXpkgXX.html
devtools/skeletons/agent/doc/autodocs/: .cvsignore  Makefile.am
devtools/skeletons/agent/package/: yast2-XXpkgXX.changes
devtools/skeletons/agent/src/: Makefile.am  XXPkgXXAgent.cc  XXPkgXXAgent.h  Y2CCXXPkgXXAgent.cc  _cvsignore
devtools/skeletons/agent/testsuite/: Makefile.am  README
devtools/skeletons/config/: .cvsignore  RPMNAME  configure.in.in  yast2-XXpkgXX.spec.in  yast2-config-XXpkgXX.spec.in
devtools/skeletons/config-python/: MAINTAINER  yast2-XXpkgXX.spec.in
devtools/skeletons/config-python/doc/: Makefile.am
devtools/skeletons/config-python/src/: Makefile.am  XXPkgXX.py  XXpkgXX.desktop  XXpkgXX.py  complex.py  dialogs.py  helps.py  wizards.py
devtools/skeletons/config-python/testsuite/tests/: XXPkgXX.out  XXPkgXX.ycp
devtools/skeletons/config/agents/: Makefile.am
devtools/skeletons/config/doc/: Makefile.am
devtools/skeletons/config/doc/autodocs/: Makefile.am
devtools/skeletons/config/package/: yast2-XXpkgXX.changes
devtools/skeletons/config/src/: Makefile.am  XXPkgXX.pm  XXPkgXX.ycp  XXPkgXX2.pm  XXPkgXX3.py  XXpkgXX.desktop  XXpkgXX.y2cc  XXpkgXX.ycp  XXpkgXX_auto.ycp  XXpkgXX_proposal.ycp  XXpkgXX_write.ycp  complex.ycp  dialogs.ycp  helps.ycp  menuentry_XXpkgXX.y2cc  misc.ycp  routines.ycp  ui.ycp  wizards.ycp
devtools/skeletons/config/testsuite/: Makefile.am
devtools/skeletons/config/testsuite/tests/: XXPkgXX.out  XXPkgXX.ycp
devtools/skeletons/rest-plugin/: README  Rakefile
devtools/skeletons/rest-plugin/app/controllers/: XXpkgXX_controller.rb
devtools/skeletons/rest-plugin/app/models/: XXpkgXX.rb
devtools/skeletons/rest-plugin/config/resources/: XXpkgXX.yml
devtools/skeletons/rest-plugin/package/: yast2-webservice-XXpkgXX.spec
devtools/skeletons/rest-plugin/rakelib/: XXpkgXX_tasks.rake
devtools/skeletons/rest-plugin/test/: XXpkgXX_test.rb
devtools/skeletons/trans/: .cvsignore  .svnignore  MAINTAINER  Makefile.cvs  RPMNAME  configure.in.in  yast2-trans-XXpkgXX.spec.in
devtools/skeletons/trans/package/: .svnignore  yast2-trans-XXpkgXX.changes
devtools/skeletons/trans/po/: .cvsignore
doc_tools/: Makefile.am
docbook/: Makefile.am
doxygen/: Doxyfile  Makefile.am  ydoxygen
jenkins-tools/: .gitignore  README.md  config.xml  fetch-jobs.rb  jenkins.yml  jenkins.yml.template  yast-jenkins-create.rb  yast-jenkins-delete.rb  yast-jenkins-list-jobs.rb  yast-jenkins-modify.rb
mass-tools/: README  y2m
misc/: .cvsignore  HowTo  Makefile  dep2dot.awk  dep2order.awk  gendep.awk  import-clu.dot  import-pkg.dot  import.dot  import.pl  import.sh
module_devel/: Makefile.am
module_devel/y2tool/: Makefile.am  check_deps  checkin-stable  create-spec  devtools-migration  for-proofread  gen_logic_deps  kill-leftover-stuff  svnall  svnignore  version.in  y2autoconf  y2compile  y2tool  yastdoc  ycp_graph
obs-tools/: README.md  opensuse42_submit.sh
package/: yast2-devtools.changes  yast2-devtools.spec
prefixbuild/: README  condup  epfx  pfx  recreate  yast2-deps  yp
scrdoc/: Makefile.am
test/: Makefile.am  po_add_format_hints_test.rb
travis-tools/: README.md  travis_setup.sh
y2logview/: Makefile.am  README  y2logview.tcl
y2logview/y2log_ana/: .gitignore  Makefile.am  cgui.cc  cgui.h  cman.cc  configure.in.in  cy2log.cc  cy2log.h  help  moc_cgui.cc
yast2/: Makefile.am  README.mkupdate  README.update_logconf  check-pot-comments  check_buildrequires  check_neededforbuild  checkall_buildrequires  checkall_neededforbuild  findlogid  freshdoc  freshdoc.conf  freshdoc.conf.diff  giveheader  insert_install_target  make_wrapper  migrate_common_messages_popups  mkupdate  showy2log  update_logconf  ycp-mode.el  ycp.vim  ycp2yml.rb  ycp_filetype.vim  ycp_puttext  ydb.el
yast2/check_ycp/: .cvsignore  Makefile.am  check_ycp  check_ycp-doc.spec.in
yast2/check_ycp/doc/: .cvsignore  Makefile.am  check_ycp-contents.xml  check_ycp-section.xml  check_ycp.sgml  check_ycp.xml
ycpdoc/: .cvsignore  Makefile.am
ycpdoc/doc/example/: Makefile.am  modules.ycp
ydoc/: .cvsignore  Makefile.am
ytools/: Makefile.am
ytools/y2tool/: Makefile.am  analyze_logs  check_icons  create-new-package  find-unused-published  rny2rnc  rubocop-0.71.0_yast_style.yml  rubocop-1.24.1_yast_style.yml  rubocop_yast_style.yml  showy2log  tagversion  y2autoconf  y2automake
ytools/yast2/: Makefile.am  check_po  checkall_buildrequires  create_maintenance_branch  create_maintenance_branch.rb  suse-start-ycp-mode.el
yxp/: .cvsignore  Makefile  README  bitand.ycp  call_graph  call_graph.xsl  call_graph.ycp  prune-ignore.xsl  query-n.xsl  ycp-grep  yxp.c  yxp.fl  yxp.xsl  yxp.y
(+216 files in other folders)
