dnl Process this file with autoconf to produce a configure script.
AC_INIT(devtools/bin/Makefile.am) dnl a source file from your sub dir, but acinclude.m4 does the job
AC_CANONICAL_SYSTEM
AC_ARG_PROGRAM

AC_PREFIX_DEFAULT(/usr)

VERSION=`cat ${srcdir}/VERSION`
RPMNAME=`cat ${srcdir}/RPMNAME`
MAINTAINER=`cat ${srcdir}/MAINTAINER`
YAST2DEVTOOLS=/usr/share/YaST2/devtools

docdir=\${prefix}/share/doc/packages/$RPMNAME

AM_INIT_AUTOMAKE($RPMNAME, $VERSION) dnl searches for some needed programs

AC_SUBST(VERSION)
AC_SUBST(RPMNAME)
AC_SUBST(MAINTAINER)
AC_SUBST(YAST2DEVTOOLS)

AC_SUBST(docdir)

ybindir=\${prefix}/lib/YaST2/bin
plugindir=\${libdir}/YaST2/plugin
includedir=\${prefix}/include/YaST2

AC_SUBST(ybindir)
AC_SUBST(plugindir)
AC_SUBST(includedir)

YCPDOC=\${srcdir}/ycpdoc/src/ycpdoc
AC_SUBST(YCPDOC)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

AC_PATH_PROG(SGML2HTML, sgml2html, false)
if test "$SGML2HTML" = "false"; then
	AC_MSG_ERROR([sgmltool not installed])
	exit
fi

AC_PATH_PROG(SGML2TXT,   sgml2txt,   false)
AC_PATH_PROG(SGML2INFO,  sgml2info,  false)
AC_PATH_PROG(SGML2LATEX, sgml2latex, false)

AC_OUTPUT(Makefile
	package/yast2-devtools.spec:yast2-devtools.spec.in
	devtools/Makefile
	devtools/bin/Makefile
	devtools/admin/Makefile
	devtools/admin/po/Makefile
	devtools/admin/copyright/Makefile
	devtools/doc/Makefile
	devtools/doc/skeletons/Makefile
	devtools/doc/skeletons/config/Makefile
	devtools/skeletons/Makefile
	scrdoc/Makefile
	scrdoc/doc/Makefile
	scrdoc/src/Makefile
	ydoc/doc/Makefile
	ydoc/src/Makefile
	ydoc/po-tools/Makefile
	ydoc/Makefile
	ycpdoc/doc/Makefile
	ycpdoc/src/Makefile
	ycpdoc/Makefile)
