#
# Makefile.am for devtools/devtools/bin
#

pkgdatadir = @YAST2DEVTOOLS@/bin

bin_SCRIPTS = y2tool yastdoc
ybin_SCRIPTS = ycpmakedep

pkgdata_SCRIPTS = 				\
	checkin-stable				\
	check-textdomain			\
	create-new-package			\
	create-spec				\
	devtools-migration			\
	for-proofread				\
	get-lib					\
	gettextdomains				\
	kill-leftover-stuff			\
	pot-spellcheck				\
	rny2rnc					\
	showy2log				\
	svnall					\
	svnignore				\
	tagversion 				\
	oscsubmit 				\
	obssync					\
	version					\
	y2autoconf 				\
	y2automake 				\
	y2compile				\
	y2makeall               		\
	y2makepot				\
	check_icons				\
	check_deps				\
	gen_logic_deps				\
	gen_logic_deps_nodes

EXTRA_DIST = $(bin_SCRIPTS) $(ybin_SCRIPTS) $(pkgdata_SCRIPTS) version.in

