#
# Makefile.am for devtools/devtools/bin
#

pkgdatadir = @YAST2DEVTOOLS@/bin

dist_pkgdata_SCRIPTS = 				\
	check_icons				\
	check-textdomain			\
	find-unused-published			\
	get-lib					\
	pot-spellcheck				\
	rny2rnc					\
	showy2log				\
	tagversion

confdatadir = @YAST2DEVTOOLS@/data
dist_confdata_DATA = rubocop_yast_style.yml rubocop-0.71.0_yast_style.yml rubocop-1.24.1_yast_style.yml
