#
# Makefile.am for devtools/devtools/skeletons/config/src
#

yncludedir = @yncludedir@/XXpkgXX

client_DATA =			\
	XXpkgXX.ycp		\
	XXpkgXX_auto.ycp	\
	XXpkgXX_proposal.ycp

ynclude_DATA =			\
	helps.ycp		\
	wizards.ycp		\
	dialogs.ycp		\
	complex.ycp		\
	routines.ycp

config_DATA =			\
	XXpkgXX.y2cc

desktop_DATA =			\
	XXpkgXX.desktop

module_DATA =			\
	XXPkgXX.ycp

EXTRA_DIST = $(client_DATA) $(ynclude_DATA) $(config_DATA) $(module_DATA)
